--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -33,6 +33,7 @@
                         <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                         <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
                     {% else %}
+                        <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New post</a>
                         <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                         <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                     {% endif %}
